--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,20 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_image_slideshow: ^0.1.4
+  persistent_bottom_nav_bar: ^5.0.2
+  fluentui_icons: ^1.0.0
+  icon_forest: ^1.1.8
+  cupertino_icons: ^1.0.5
+  icofont_flutter: ^1.4.0
+  icony: ^1.0.2
+  akar_icons_flutter: ^1.1.11
+  remixicon: ^1.0.0
+  justino_icons: ^0.1.0
+  bootstrap_icons: ^1.8.1
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
